cabal-version:      2.4
name:               ebuild
version:            0.1.0.0
synopis:            Provides a data type and parser for Gentoo ebuilds
synopsis:
    This package aims to provide all the tools necessary to manipulate a
    gentoo ebuild in haskell.

license:            MPL-2.0
license-file:       LICENSE
author:             Wolfgang E. Sanyer
maintainer:         WolfgangESanyer@gmail.com
extra-source-files: CHANGELOG.md
copyright:          2021 Wolfgang E. Sanyer

library
    exposed-modules:  Data.EBuild
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    text ^>=1.2.4.1
